--- a/app/views/fwt_push_notification_server/device_tokens/index.html.erb
+++ b/app/views/fwt_push_notification_server/device_tokens/index.html.erb
@@ -1,20 +1,35 @@
 <h1>Device tokens</h1>
-<%= paginate @device_tokens %>
-<table class='table table-striped'>
- <thead>
-  <tr>
-    <th>Token</th>
-    <th width="200px">Date added</th>
-  </tr>
- </thead>
- <tbody>
-    <% @device_tokens.each do |t| %>
-     <tr>
-      <td><%= t.token %> </td>
-      <td><%= t.updated_at.strftime("%d-%m-%Y %H:%M") %></td>
-     </tr>
-    <% end %>
- </tbody>
-</table>
+<h2><small>Total: <%= @device_tokens.count %></small></h2>
 
-<%= paginate @device_tokens %>
+<% if @device_tokens.empty? %>
+  
+  <%= render partial: 'empty_view' %>
+  
+<% else %>
+
+  <%= paginate @device_tokens %>
+
+  <table class='table table-striped'>
+   <thead>
+    <tr>
+      <th>Token</th>
+      <th>Device ID</th>
+      <th>Device Name</th>
+      <th width="200px">Date added</th>
+    </tr>
+   </thead>
+   <tbody>
+      <% @device_tokens.each do |t| %>
+       <tr>
+        <td><%= t.token %> </td>
+        <td><%= t.device_id %></td>
+        <td><%= t.device_name %></td>
+        <td><%= t.updated_at.strftime("%d-%m-%Y %H:%M") %></td>
+       </tr>
+      <% end %>
+   </tbody>
+  </table>
+
+  <%= paginate @device_tokens %>
+
+<% end %>
