Added install generator. Bugfixes.

--- a/app/views/layouts/fwt_push_notification_server/application.html.erb
+++ b/app/views/layouts/fwt_push_notification_server/application.html.erb
@@ -2,7 +2,7 @@
   <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title><%= content_for?(:title) ? yield(:title) : "FWT Push Notifications" %></title>
+    <title><%= content_for?(:title) ? yield(:title) : FwtPushNotificationServer.config[:title] %></title>
     <meta name="description" content=""/>
     <meta name="author" content=""/>
     <%= stylesheet_link_tag  "fwt_push_notification_server/application", :media => "all" %>
